fixed button positioning on mobile

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -22,6 +22,10 @@ a {
   }
 }
 
+#navbar {
+  z-index: 1;
+}
+
 .arrow {
   color: #F88436;
   .fas {
